--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,31 @@
-plugins {
-    id 'java'
-}
+ buildscript {
+     ext {
+         springBootVersion = '2.1.9.RELEASE'
+     }
+     repositories {
+         mavenCentral()
+         jcenter()
+     }
+     dependencies {
+         classpath("org.springframework.boot:spring-boog-gradle-plugin:${springBootVersion}")
+     }
+ }
+ 
+ apply plugin: 'java'
+ apply plugin: 'eclipse'
+ apply plugin: 'org.springframework.boot'
+ apply plugin: 'io.spring.dependency-management'
 
 group 'com.khyunjiee'
 version '1.0-SNAPSHOT'
-
 sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile('org.springframework.boot:spring-boot-starter-web')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
